# alacritty

alacritty/: Cargo.toml
alacritty/src/: cli.rs  window_context.rs
alacritty/src/display/: background.rs  mod.rs
ascii-pipeline/: Cargo.toml  README.md
ascii-pipeline/crates/ascii_cli/: Cargo.toml
ascii-pipeline/crates/ascii_cli/src/: main.rs
ascii-pipeline/crates/ascii_render/: Cargo.toml
ascii-pipeline/crates/ascii_render/src/: lib.rs
ascii-pipeline/crates/ascii_render/src/ascii/: gradient.rs  grid.rs  mapping.rs  mod.rs  series.rs
ascii-pipeline/crates/ascii_render/src/image_pipeline/: adjust.rs  edges.rs  loader.rs  mod.rs  resize.rs
extra/completions/: _alacritty  alacritty.bash  alacritty.fish
